--- a/src/konwentor/application/templates/game_borrow/list.jinja2
+++ b/src/konwentor/application/templates/game_borrow/list.jinja2
@@ -7,6 +7,7 @@
 {%- endblock %}
 
 {% block content %}
+    {{ convent.edned_warning() }}
     {{ active_table(borrows) }}
     {{ log_table(logs) }}
 {% endblock %}
