--- a/src/konwentor/application/templates/gamecopy/add.jinja2
+++ b/src/konwentor/application/templates/gamecopy/add.jinja2
@@ -5,6 +5,7 @@
 {%- endblock %}
 
 {% block content %}
+    {{ convent.edned_warning() }}
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
