--- a/src/konwentor/application/templates/gamecopy/list.jinja2
+++ b/src/konwentor/application/templates/gamecopy/list.jinja2
@@ -21,6 +21,7 @@
 {% endmacro %}
 
 {% block content %}
+    {{ convent.edned_warning() }}
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
