Tests for GameBorrow.

--- a/src/konwentor/application/templates/game_borrow/log_list.jinja2
+++ b/src/konwentor/application/templates/game_borrow/log_list.jinja2
@@ -27,7 +27,7 @@
             <td>{{borrow.name}}</td>
             <td>{{borrow.surname}}</td>
             <td>{{borrow.borrowed_timestamp.strftime ("%Y-%m-%d %H:%M:%S")}}</td>
-            <td>{{borrow.get_return_timestamp_or_empty_string()}}</td>
+            <td>{{borrow.get_return_timestamp()}}</td>
             <td>{{borrow.document_number}} ({{borrow.document_type}})</td>
         </tr>
     {% endcall %}
