Moved templates to application locations.

--- a/src/konwentor/gameborrow/templates/list.jinja2
+++ b/src/konwentor/gameborrow/templates/list.jinja2
@@ -1,6 +1,6 @@
 {% extends "main.jinja2" %}
-{% from "game_borrow/active_list.jinja2" import active_table with context %}
-{% from "game_borrow/log_list.jinja2" import log_table with context %}
+{% from "konwentor.gameborrow:templates/active_list.jinja2" import active_table with context %}
+{% from "konwentor.gameborrow:templates/log_list.jinja2" import log_table with context %}
 
 {% block page_head -%}
     Gry na konwencie
