Test for convent app [67% -> 77%]

--- a/src/konwentor/gamecopy/templates/add.jinja2
+++ b/src/konwentor/gamecopy/templates/add.jinja2
@@ -5,7 +5,7 @@
 {%- endblock %}
 
 {% block content %}
-    {{ convent.edned_warning() }}
+    {{ convent.ended_warning() }}
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
