--- a/src/konwentor/gameborrow/templates/list.jinja2
+++ b/src/konwentor/gameborrow/templates/list.jinja2
@@ -7,7 +7,7 @@
 {%- endblock %}
 
 {% block content %}
-    {{ convent.edned_warning() }}
+    {{ convent.ended_warning() }}
     {{ active_table(borrows) }}
     {{ log_table(logs) }}
 {% endblock %}
