--- a/src/konwentor/gamecopy/templates/list.jinja2
+++ b/src/konwentor/gamecopy/templates/list.jinja2
@@ -21,7 +21,7 @@
 {% endmacro %}
 
 {% block content %}
-    {{ convent.edned_warning() }}
+    {{ convent.ended_warning() }}
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
