--- a/src/konwentor/forms/templates/submit.jinja2
+++ b/src/konwentor/forms/templates/submit.jinja2
@@ -1,1 +1,1 @@
-<button type="submit" class="btn btn-lg {{class}}">{{label}}</button>
+<button type="submit" class="{{base_class}} {{class}}">{{label}}</button>
