--- a/src/konwentor/application/templates/modal.jinja2
+++ b/src/konwentor/application/templates/modal.jinja2
@@ -1,5 +1,7 @@
 {% macro modal(id, btn_class="btn-default", btn_label, title, success_btn) -%}
-    <button data-target="#{{id}}" data-toggle="modal" class="btn {{btn_class}}">{{btn_label}}</button>
+    {% if btn_label != "" -%}
+        <button data-target="#{{id}}" data-toggle="modal" class="btn {{btn_class}}">{{btn_label}}</button>
+    {%- endif %}
     <div aria-hidden="true" aria-labelledby="{{id}}_label" role="dialog" tabindex="-1" id="{{id}}" class="modal fade" style="display: none;">
         <div class="modal-dialog">
             <div class="modal-content">
