--- a/src/konwentor/forms/templates/combobox.jinja2
+++ b/src/konwentor/forms/templates/combobox.jinja2
@@ -1,12 +1,19 @@
 <div class="form-group">
-    <label>{{label}}:</label>
+    <label style="display: block;">{{label}}:</label>
     {%- if error %} <div class="label label-danger">{{message}}</div>{%- endif -%}
 
-    <select class="form-control" name="{{name}}" id="{{id}}" {%- if disabled %} disabled=disabled {% endif -%}>
-        {% for element in field.data %}
-            <option value="{{element['value']}}"
-                {%- if element['value'] == value%} selected{% endif -%}
-            >{{element['label']}}</option>
-        {% endfor %}
-    </select>
+    <input
+            class="form-control"
+            value="{{value}}"
+            name="{{name}}"
+            id="{{id}}"
+            {%- if disabled %} disabled=disabled {% endif -%}
+            >
+    <ul id="{{id}}_list" style="display: none;">
+        {%- for element in field.data -%}
+            {%- if element['value'] != '' -%}
+                <li>{{element['label']}}</li>
+            {%- endif -%}
+        {%- endfor -%}
+    </ul>
 </div>
