--- a/src/konwentor/gameborrow/templates/active_list.jinja2
+++ b/src/konwentor/gameborrow/templates/active_list.jinja2
@@ -1,4 +1,4 @@
-{% from "table.jinja2" import table %}
+{% from "table.jinja2" import table with context %}
 {% from "modal.jinja2" import modal %}
 
 {% macro header() -%}
