--- a/src/konwentor/game/templates/list.jinja2
+++ b/src/konwentor/game/templates/list.jinja2
@@ -1,5 +1,5 @@
 {% extends "main.jinja2" %}
-{% from "table.jinja2" import table %}
+{% from "table.jinja2" import table with context%}
 {% from "modal.jinja2" import modal %}
 
 {% block page_head -%}
@@ -44,8 +44,6 @@
 {% endblock %}
 
 {% block js %}
-    <script src="{{static('/js/plugins/dataTables/jquery.dataTables.js')}}"></script>
-    <script src="{{static('/js/plugins/dataTables/dataTables.bootstrap.js')}}"></script>
     <script type="text/javascript">
     $(document).ready(function() {
         $('#games_table').dataTable({
