--- a/src/konwentor/application/templates/head.jinja2
+++ b/src/konwentor/application/templates/head.jinja2
@@ -1,35 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Konwentor</title>
-
-    {{static.generate_css_links()}}
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-<body>
-    {% block body %}{% endblock %}
-
-    {{static.generate_js_links()}}
-
-    <script type="text/javascript">
-    {%- for code in _js_codes %}{{code|safe}}{% endfor -%}
-    </script>
-
-    {% block js %}{% endblock %}
-</body>
+    <head>
+        {% include "application/meta.jinja2" -%}
+        {{static.generate_css_links()}}
+        {% include "application/ie.jinja2" %}
+    </head>
+    <body>
+        {% block body %}{% endblock %}
+        {{static.generate_js_links()}}
+        {{static.generate_js_codes()}}
+        {% block js %}{% endblock %}
+    </body>
 </html>
