--- a/src/konwentor/convent/templates/list.haml
+++ b/src/konwentor/convent/templates/list.haml
@@ -19,6 +19,7 @@
       %td -> =convent.state
       %td
         =convent.switch()
+        =convent.edit()
         =convent.delete()
         =convent.start()
         =convent.end()
