More info for games.

--- a/src/konwentor/game/templates/add.jinja2
+++ b/src/konwentor/game/templates/add.jinja2
@@ -17,6 +17,10 @@
                             {{form.begin()}}
                                 {{form.error()}}
                                 {{form.text('name')}}
+                                {{form.text('players_description')}}
+                                {{form.text('time_description')}}
+                                {{form.text('type_description')}}
+                                {{form.text('difficulty')}}
                                 {{form.submit('Dodaj')}}
                             {{form.end()}}
                         </div>
