--- a/src/konwentor/game/templates/edit.haml
+++ b/src/konwentor/game/templates/edit.haml
@@ -16,5 +16,9 @@
               =form.error()
               =form.hidden('id')
               =form.text('name')
+              =form.text('players_description')
+              =form.text('time_description')
+              =form.text('type_description')
+              =form.text('difficulty')
               =form.submit('Zapisz')
               =form.end()
