--- a/src/konwentor/application/templates/modal.jinja2
+++ b/src/konwentor/application/templates/modal.jinja2
@@ -20,3 +20,28 @@
         </div>
     </div>
 {%- endmacro %}
+
+{% macro modal_form(id, btn_class="btn-default", btn_label, title, success_btn, form) -%}
+    {% if btn_label != "" -%}
+        <button data-target="#{{id}}" data-toggle="modal" class="btn {{btn_class}}">{{btn_label}}</button>
+    {%- endif %}
+    <div aria-hidden="true" aria-labelledby="{{id}}_label" role="dialog" tabindex="-1" id="{{id}}" class="modal fade" style="display: none;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                {{form.begin()}}
+                    <div class="modal-header">
+                        <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                        <h4 id="{{id}}_label" class="modal-title">{{title()}}</h4>
+                    </div>
+                    <div class="modal-body">
+                        {{caller()}}
+                    </div>
+                    <div class="modal-footer">
+                        <button data-dismiss="modal" class="btn btn-default" type="button">Zamknij</button>
+                        {{success_btn()}}
+                    </div>
+                {{form.end()}}
+            </div>
+        </div>
+    </div>
+{%- endmacro %}
