Added side menu.

--- a/src/konwentor/application/static/css/sb-admin-2.css
+++ b/src/konwentor/application/static/css/sb-admin-2.css
@@ -21,9 +21,12 @@ body {
 @media(min-width:768px) {
     #page-wrapper {
         position: inherit;
-        margin: 0 0 0 170px;
+        margin: 0 0 0 0;
         padding: 0 30px;
         border-left: 1px solid #e7e7e7;
+    }
+    #page-wrapper.withsidebar {
+        margin: 0 0 0 175px;
     }
 }
 
@@ -94,6 +97,19 @@ body {
     border-bottom: 1px solid #e7e7e7;
 }
 
+.sidebar.top ul li {
+    float: left;
+}
+.sidebar.top ul li ul.nav-second-level {
+    border: 2px solid #398439;
+    position: absolute;
+    background-color: #fff;
+}
+.sidebar.top ul li ul.nav-second-level li {
+    clear: both;
+    width: 175px;
+}
+
 .sidebar ul li a.active {
     background-color: #eee;
 }
@@ -127,8 +143,12 @@ body {
     .sidebar {
         z-index: 1;
         position: absolute;
-        width: 170px;
+        margin-top: 92px;
+        width: 175px;
+    }
+    .sidebar.top {
         margin-top: 51px;
+        width: auto;
     }
 
     .navbar-top-links .dropdown-messages,
@@ -366,4 +386,8 @@ div.custom-combobox label {
 }
 div.custom-combobox ul {
     display: none;
+}
+
+.navbar {
+    min-height: 92px;
 }
