--- a/src/konwentor/application/templates/main.jinja2
+++ b/src/konwentor/application/templates/main.jinja2
@@ -3,7 +3,7 @@
     <div id="wrapper">
 
         <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <nav class="navbar navbar-defaultw navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
                     <span class="sr-only">Toggle navigation</span>
@@ -36,10 +36,13 @@
             </ul>
             <!-- /.navbar-top-links -->
 
-            {{menu()}}
+            {{topmenu()}}
+            {% if sidemenu %}
+                {{sidemenu()}}
+            {% endif %}
         </nav>
 
-        <div id="page-wrapper">
+        <div id="page-wrapper"{% if sidemenu %} class="withsidebar"{% endif %}>
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">{% block page_head -%}
