--- a/src/konwentor/menu/templates/side.jinja2
+++ b/src/konwentor/menu/templates/side.jinja2
@@ -1,15 +1,15 @@
-<div class="navbar-default sidebar top" role="navigation">
+<div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
-        <ul class="nav" id="top-menu">
+        <ul class="nav" id="side-menu">
             {% for object in menu %}
                 {% if object.is_visible() -%}
-                    <li>
+                    <li class="active">
                         <a {%- if object.is_highlited() %} class="active"{% endif %} href="{{object.get_url()}}">
                             <i class="fa {{object.get_icon()}} fa-fw"></i> {{object.name}}
                             {%- if object.childs %}<span class="fa arrow"></span>{% endif -%}
                         </a>
                         {% if object.childs -%}
-                            <ul class="nav nav-second-level collapse">
+                            <ul class="nav nav-second-level collapse in">
                                 {% for child in object.childs %}
                                     {% if child.is_visible() -%}
                                         <li>
