--- a/src/konwentor/convent/templates/list.haml
+++ b/src/konwentor/convent/templates/list.haml
@@ -3,8 +3,7 @@
 
 -block page_head
   Konwenty
-  -if user.has_access_to_route('convent:add')
-    \ - <small><a href="{{route('convent:add')}}">Dodaj</a></small>
+  = link.button('Dodaj', 'convent:add')
 
 -macro header()
   %tr
