Dynamicly add rooms.

--- a/src/konwentor/convent/templates/add.haml
+++ b/src/konwentor/convent/templates/add.haml
@@ -15,6 +15,6 @@
               =form.begin()
               =form.error()
               =form.text('name')
-              =form.text('room')
+              =form.text_with_add('room')
               =form.submit('Dodaj')
               =form.end()
