--- a/src/konwentor/convent/templates/edit.haml
+++ b/src/konwentor/convent/templates/edit.haml
@@ -16,5 +16,6 @@
               =form.error()
               =form.hidden('id')
               =form.text('name')
+              =form.text_with_add('room')
               =form.submit('Zapisz')
               =form.end()
