Add game now works on rooms.

--- a/src/konwentor/gamecopy/templates/add.jinja2
+++ b/src/konwentor/gamecopy/templates/add.jinja2
@@ -20,8 +20,8 @@
                                 {{form.error()}}
                                 {{form.combobox('game_name')}}
                                 {{form.select('user_id')}}
-                                {{form.select('convent_id')}}
                                 {{form.text('count')}}
+                                {{form.hidden('room_id')}}
                                 {{form.submit('Dodaj')}}
                             {{form.end()}}
                         </div>
