Hints now works on rooms.

--- a/src/konwentor/gameborrow/templates/add.jinja2
+++ b/src/konwentor/gameborrow/templates/add.jinja2
@@ -31,3 +31,11 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js %}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            new GatherHint('GameBorrowAddForm', '{{room_id}}');
+        });
+    </script>
+{% endblock %}
