--- a/src/konwentor/forms/templates/text_with_add.jinja2
+++ b/src/konwentor/forms/templates/text_with_add.jinja2
@@ -14,6 +14,6 @@
             >
     {% endfor %}
     <button class="btn btn-warning addroom" {%- if disabled %} disabled=disabled {% endif -%} for="{{id}}">
-        Dodaj pokój
+        {{button_label}}
     </button>
 </div>
