--- a/src/konwentor/forms/templates/text_with_add.jinja2
+++ b/src/konwentor/forms/templates/text_with_add.jinja2
@@ -2,7 +2,7 @@
     <label>{{label}}:</label>
     {% include '_error.jinja2' %}
 
-    {% for value in values %}
+    {% for value in values or [''] %}
         <input
             class="form-control"
             value="{{value}}"
