--- a/src/konwentor/auth/templates/add.haml
+++ b/src/konwentor/auth/templates/add.haml
@@ -16,6 +16,8 @@
               =form.error()
               =form.text('name')
               =form.text('email')
+              =form.password('password1')
+              =form.password('password2')
               =form.text_with_add_from_list('permission', button_label='Dodaj prawa', elements=all_permissions)
               =form.submit('Zapisz')
               =form.end()
