--- a/src/konwentor/application/templates/main.jinja2
+++ b/src/konwentor/application/templates/main.jinja2
@@ -22,7 +22,7 @@
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li>
-                            <a href="#">
+                            <a href="{{route('auth:editself')}}">
                                 <div>{{user.name}}</div>
                             </a>
                         </li>
