--- a/src/konwentor/convent/templates/add.haml
+++ b/src/konwentor/convent/templates/add.haml
@@ -15,6 +15,6 @@
               =form.begin()
               =form.error()
               =form.text('name')
-              =form.text_with_add('room', 'Dodaj pokój')
+              =form.text_with_add('room', button_label='Dodaj pokój')
               =form.submit('Dodaj')
               =form.end()
