--- a/src/konwentor/gameborrow/templates/log_list.jinja2
+++ b/src/konwentor/gameborrow/templates/log_list.jinja2
@@ -6,8 +6,7 @@
         <th>&nbsp;</th>
         <th>Nazwa</th>
         <th>Właściciel</th>
-        <th>Imię</th>
-        <th>Nazwisko</th>
+        <th>Wypożyczający</th>
         <th>Czas zabrania</th>
         <th>Czas oddania</th>
     </tr>
@@ -24,7 +23,6 @@
             <td>{{borrow.gameentity.gamecopy.game.name}}</td>
             <td>{{borrow.gameentity.gamecopy.owner.name}}</td>
             <td>{{borrow.name}}</td>
-            <td>{{borrow.surname}}</td>
             <td>{{borrow.borrowed_timestamp.strftime ("%Y-%m-%d %H:%M:%S")}}</td>
             <td>{{borrow.get_return_timestamp()}}</td>
         </tr>
